@@ -95,7 +95,7 @@ production.
 * (bug 29332) Warn if user requests mediawiki-announce subscription but does not
   enter an e-mail address.
 * (bug 25375) Add canonical namespaces to JavaScript "wgNamespaceIds"
-* The class JpegOrTiffHandler was renamed ExifBitmapHandler. 
+* The class JpegOrTiffHandler was renamed ExifBitmapHandler.
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
@@ -105,7 +105,7 @@ production.
 * (bug 28578) API's parse module should not silently override invalid
   title inputs
 * (bug 20699) API watchlist should list log-events
-* (bug 29070) Add token to action=watch API 
+* (bug 29070) Add token to action=watch API
 * (bug 29221) Expose oldrevid in watchlist output
 * (bug 29267) always give the servername for meta=siteinfo&siprop=dbrepllag
 * (bug 28897) rvparse doesn’t seem to work with rvsection
@@ -116,6 +116,7 @@ production.
 * (bug 21346) Make deleted images searchable by hash (disabled in Miser Mode)
 * (bug 27595) sha1 search of list=filearchive does not work
 * (bug 26763) Make RSS/Atom of user contributions more visible
+* (bug 25133) allow redirects also for action=parse&pageid
 
 === Languages updated in 1.19 ===
 
